force-app/main/default/objects/ssot__CarePlanTemplateBenefit__dlm/fields/ssot__ProgramBenefitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramBenefitId__c</fullName>
    <label>Program Benefit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramBenefitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>