force-app/main/default/objects/ssot__CarePlanTemplateBenefit__dlm/fields/ssot__rel_1716576038591_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716576038591_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanTemplateBenefit_CarePlanTemp_rel</label>
    <referenceTo>ssot__CarePlanTemplate__dlm</referenceTo>
    <relationshipLabel>CarePlanTemplateBenefit_CarePlanTemp_rel</relationshipLabel>
    <relationshipName>rel_1716576038591_end</relationshipName>
    <type>Lookup</type>
</CustomField>