force-app/main/default/objects/ssot__CarePlanTemplateBenefit__dlm/fields/ssot__rel_1716726576517_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726576517_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanTemplateBenefit_ProgramBenef_rel</label>
    <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
    <relationshipLabel>CarePlanTemplateBenefit_ProgramBenef_rel</relationshipLabel>
    <relationshipName>rel_1716726576517_end</relationshipName>
    <type>Lookup</type>
</CustomField>